back/back-dev-live.log

> back@1.0.0 dev
> ts-node-dev --respawn --transpile-only src/server.ts

[INFO] 19:07:10 ts-node-dev ver. 2.0.0 (using ts-node ver. 10.9.2, typescript ver. 5.9.3)
Compilation error in C:\Users\mosan\Documents\Sistemas\cronos\back\src\routes\employees.ts
[ERROR] 19:07:11 тип Unable to compile TypeScript:
src/routes/employees.ts(44,53): error TS1127: Invalid character.
src/routes/employees.ts(44,54): error TS1434: Unexpected keyword or identifier.

^C^C